# betrusted-ec

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.adoc  betrusted-ec.py  betrusted_ec.py  build-docs.sh  loadec.sh  lxbuildenv.py  retry-build.py  xoulon-mcu.py
.cargo/: config
betrusted-rust/: Cargo.toml  build.rs
betrusted-rust/.cargo/: config
betrusted-rust/betrusted-hal/src/: api_gasgauge.rs  hal_i2c.rs  hal_time.rs  lib.rs
betrusted-rust/betrusted-pac/: rebuild-pac.sh
betrusted-rust/betrusted-pac/src/: ctrl.rs  i2c.rs  lib.rs  reboot.rs  rgb.rs  ticktimer.rs  timer0.rs
betrusted-rust/betrusted-pac/src/ctrl/: bus_errors0.rs  bus_errors2.rs  reset.rs  scratch0.rs
betrusted-rust/betrusted-pac/src/i2c/: command.rs  control.rs  ev_enable.rs  ev_status.rs  prescale1.rs  rxr.rs  status.rs
betrusted-rust/betrusted-pac/src/picorvspi/: cfg2.rs  cfg3.rs  cfg4.rs  stat1.rs  stat2.rs  stat3.rs  stat4.rs
betrusted-rust/betrusted-pac/src/reboot/: addr1.rs  addr3.rs
betrusted-rust/betrusted-pac/src/rgb/: addr.rs
betrusted-rust/betrusted-pac/src/ticktimer/: time4.rs  time5.rs
betrusted-rust/betrusted-pac/src/timer0/: en.rs  ev_pending.rs  load1.rs  load2.rs  reload0.rs  reload1.rs  reload3.rs  update_value.rs  value0.rs  value1.rs
betrusted-rust/betrusted-pac/src/version/: gitrev0.rs  gitrev1.rs  minor.rs
betrusted-rust/src/: main.rs
bios/: Makefile  isr.c  linker.ld  main.c
bios/libbase/: Makefile  crt0-vexriscv.S
bios/libcompiler_rt/: Makefile
doc/: Rust.md
precursors/: csr.csv  soc.svd
rtl/: hard_i2c.py  messible.py  rtl_i2c.py  sbled.py  spi.py  spimemio.v  ticktimer.py  warmboot.py
rtl/trng/: __init__.py  ring_osc.py
sim/: Makefile  tb.v
svd2utra/: Cargo.toml
svd2utra/examples/: soc.svd
svd2utra/src/: generate.rs
sw/: Cargo.toml  bt-wf200-pds.h  build.rs  buildpush.sh  gyro-binding-generate.sh  loader.S  memory.x  rebuild-pac.sh  rust-rom.sh  wfx-binding-generate.sh  wfx-pds-compress.py  wfx-pds-generate.sh
sw/.cargo/: config
sw/betrusted-hal/: Cargo.toml
sw/betrusted-hal/src/: api_bq25618.rs  api_charger.rs  api_gasgauge.rs  api_lm3509.rs  api_lsm6ds3.rs  api_tusb320.rs  api_wf200.rs  debug.rs  hal_hardi2c.rs  hal_i2c.rs  hal_time.rs  lib.rs  mem_locs.rs  wfx-bindings.rs
sw/betrusted-hal/src/api_wf200/: wfx_bindings.rs
sw/betrusted-pac/: Cargo.toml
sw/betrusted-pac/src/: interrupt.rs  messible.rs  picorvspi.rs  version.rs
sw/betrusted-pac/src/ctrl/: bus_errors1.rs  bus_errors3.rs  scratch1.rs  scratch2.rs  scratch3.rs
sw/betrusted-pac/src/i2c/: prescale0.rs  status.rs  txr.rs
sw/betrusted-pac/src/messible/: in_.rs  out.rs  status.rs
sw/betrusted-pac/src/picorvspi/: cfg1.rs
sw/betrusted-pac/src/reboot/: addr0.rs  addr2.rs  ctrl.rs
sw/betrusted-pac/src/rgb/: dat.rs  raw.rs
sw/betrusted-pac/src/ticktimer/: control.rs  time0.rs  time1.rs  time2.rs  time3.rs
sw/betrusted-pac/src/timer0/: load0.rs  load3.rs  reload2.rs  value2.rs  value3.rs
sw/betrusted-pac/src/version/: dirty.rs  gitextra0.rs  gitextra1.rs  gitrev2.rs  gitrev3.rs  major.rs  model.rs  revision.rs
sw/c_types/: Cargo.toml
sw/c_types/src/: lib.rs
sw/debug/: Cargo.toml
sw/debug/src/: lib.rs
sw/gyro_bindings/: Cargo.toml
sw/gyro_bindings/src/: lib.rs
sw/gyro_rs/: Cargo.toml
sw/gyro_rs/src/: hal_gyro.rs  lib.rs
sw/gyro_sys/: Cargo.toml  build.rs
sw/gyro_sys/src/: lib.rs
sw/imports/: sl_status_bindgen.h  wfx.h
sw/net/: Cargo.toml  README.md
sw/net/src/: dhcp.rs  filter.rs  hostname.rs  lib.rs  pkt_buf.rs  prng.rs  timers.rs
sw/src/: com_bus.rs  comstates.rs  dead_code.rs  debug.rs  main.rs  pkt_buf.rs  power_mgmt.rs  spi.rs  str_buf.rs  uart.rs  wifi.rs  wlan.rs
sw/wfx200_rs/: Cargo.toml
sw/wfx200_rs/src/: hal_wf200.rs  lib.rs
sw/wfx200_sys/: Cargo.toml  build.rs
sw/wfx200_sys/.cargo/: config
sw/wfx200_sys/src/: lib.rs
sw/wfx_bindings/: Cargo.toml
sw/wfx_bindings/src/: lib.rs  wfx_bindings.rs
sw/wfx_rs/: Cargo.toml
sw/wfx_rs/.cargo/: config
sw/wfx_rs/src/: bt-wf200-pds.in  hal_wf200.rs  lib.rs  pkt_buf.rs
sw/wfx_rs/src/hal_wf200/: bt_wf200_pds.rs  debug.rs
sw/wfx_sys/: Cargo.toml  build.rs
sw/wfx_sys/src/: lib.rs
sw/xous-nommu/: Cargo.toml
sw/xous-nommu/src/: definitions.rs  irq.rs  lib.rs  syscalls.rs
tools/: README.md  usb_update.py
utralib/: build.rs
xtask/: Cargo.toml
xtask/src/: main.rs
