[package]
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
readme = "README.md"
name = "betrusted-ec"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/betrusted-io/riscv.git", tag = "v0.5.5" }
riscv-rt = { git = "https://github.com/betrusted-io/riscv-rt.git", tag = "v0.6.2" }
# riscv-semihosting = { git = "https://github.com/riscv-rust/riscv-semihosting.git" }
betrusted-pac = { path = "betrusted-pac" }
betrusted-hal = { path = "betrusted-hal" }
volatile = "0.2.6"
wfx_sys = { path = "wfx_sys" }
wfx_rs = { path = "wfx_rs" }
wfx_bindings = { path = "wfx_bindings" }
xous-nommu = { path = "xous-nommu" }

# this lets you use `cargo fix`!
[[bin]]
name = "betrusted-ec"
test = false
bench = false

[profile.release]
codegen-units = 1 # 1 better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true
#opt-level=0

[features]
# debug_uart = [ "wfx_rs/debug_uart" ]
default = []  # "debug_uart" to turn on uart debugging
