[package]
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
readme = "README.md"
name = "sw"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/betrusted-io/riscv.git", tag = "v0.5.5" }
riscv-rt = { git = "https://github.com/betrusted-io/riscv-rt.git", tag = "v0.6.2" }
# riscv-semihosting = { git = "https://github.com/riscv-rust/riscv-semihosting.git" }
betrusted-hal = { path = "betrusted-hal" }
volatile = "0.2.6"
wfx_sys = { path = "wfx_sys" }
wfx_rs = { path = "wfx_rs" }
wfx_bindings = { path = "wfx_bindings" }
xous-nommu = { path = "xous-nommu" }
utralib = { path = "../utralib"}
com_rs = { path = "com_rs" }
debug = { path = "debug" }

# this lets you use `cargo fix`!
[[bin]]
name = "sw"
test = false
bench = false

[features]
debug_uart = [ "wfx_rs/debug_uart", "debug/debug_uart" ]
# default = ["debug_uart"]  # "debug_uart" to turn on uart debugging
# note to self: when debugging, watchdog timer is automatically disabled
default = ["debug_uart"]
