[package]
name = "xtask"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"const_format" = "0.2.8"
"ssh2" = "0.8.3"
"digest" = "0.9"
"sha2" = "0.9"
"md5" = "0.7"