[package]
name = "betrusted-hal"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
betrusted-pac = { path = "../betrusted-pac" }
bitflags = "1.2.1"
volatile = "0.2.6"
c_types = { path = "../c_types" }

[features]
evt = []
dvt = []
