[package]
name = "gyro_rs"
version = "0.1.0"
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gyro_sys = { path = "../gyro_sys" }
c_types = { path = "../c_types" }
betrusted-hal = { path = "../betrusted-hal" }
gyro_bindings = { path = "../gyro_bindings" }
xous-nommu = { path = "../xous-nommu" }

[features]
debug_uart = []
