[package]
name = "xous-nommu"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/betrusted-io/riscv.git", tag = "v0.5.5" }
vexriscv = "0.0.3"
